@@ -13,9 +13,7 @@
  */
 package com.querydsl.codegen;
 
-import static org.hamcrest.Matchers.containsString;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import com.querydsl.codegen.utils.JavaWriter;
 import com.querydsl.codegen.utils.model.Constructor;
@@ -54,9 +52,9 @@ public class ProjectionSerializerTest {
     Writer writer = new StringWriter();
     ProjectionSerializer serializer = new DefaultProjectionSerializer(new JavaTypeMappings());
     serializer.serialize(type, SimpleSerializerConfig.DEFAULT, new JavaWriter(writer));
-    assertTrue(writer.toString().contains("Expression<String> firstName"));
-    assertTrue(writer.toString().contains("Expression<String> lastName"));
-    assertTrue(writer.toString().contains("Expression<Integer> age"));
+    assertThat(writer.toString()).contains("Expression<String> firstName");
+    assertThat(writer.toString()).contains("Expression<String> lastName");
+    assertThat(writer.toString()).contains("Expression<Integer> age");
   }
 
   @Test
@@ -75,14 +73,11 @@ public class ProjectionSerializerTest {
     ProjectionSerializer serializer = new DefaultProjectionSerializer(new JavaTypeMappings());
     serializer.serialize(type, SimpleSerializerConfig.DEFAULT, new JavaWriter(writer));
     String generatedSource = writer.toString();
-    assertThat(
-        generatedSource,
-        containsString(
-            String.format("import %s;", GeneratedAnnotationResolver.resolveDefault().getName())));
-    assertThat(
-        generatedSource,
-        containsString(
-            "@Generated(\"com.querydsl.codegen.DefaultProjectionSerializer\")\npublic class"));
+    assertThat(generatedSource)
+        .contains("import %s;".formatted(GeneratedAnnotationResolver.resolveDefault().getName()));
+    assertThat(generatedSource)
+        .containsIgnoringNewLines(
+            "@Generated(\"com.querydsl.codegen.DefaultProjectionSerializer\")\npublic class");
   }
 
   @Test
@@ -102,10 +97,9 @@ public class ProjectionSerializerTest {
         new DefaultProjectionSerializer(new JavaTypeMappings(), Generated.class);
     serializer.serialize(type, SimpleSerializerConfig.DEFAULT, new JavaWriter(writer));
     String generatedSource = writer.toString();
-    assertThat(generatedSource, containsString("import com.querydsl.core.annotations.Generated"));
-    assertThat(
-        generatedSource,
-        containsString(
-            "@Generated(\"com.querydsl.codegen.DefaultProjectionSerializer\")\npublic class"));
+    assertThat(generatedSource).contains("import com.querydsl.core.annotations.Generated");
+    assertThat(generatedSource)
+        .containsIgnoringNewLines(
+            "@Generated(\"com.querydsl.codegen.DefaultProjectionSerializer\")\npublic class");
   }
 }
