@@ -1,7 +1,7 @@
 package com.querydsl.core.types;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 import com.querydsl.core.types.dsl.Expressions;
 import java.util.List;
@@ -14,7 +14,7 @@ public class QListTest {
     QList qList = new QList(Expressions.stringPath("a"), Expressions.stringPath("b"));
     List<?> list = qList.newInstance("a", null);
     assertEquals(2, list.size());
-    assertEquals("a", list.get(0));
+    assertEquals("a", list.getFirst());
     assertNull(list.get(1));
   }
 }
