@@ -1,7 +1,7 @@
 package com.querydsl.sql.dml;
 
 import static com.querydsl.sql.SQLExpressions.select;
-import static org.junit.Assert.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import com.querydsl.core.QueryFlag.Position;
 import com.querydsl.sql.KeyAccessorsTest.QEmployee;
@@ -27,8 +27,8 @@ public class SQLUpdateClauseTest {
     update.set(emp1.id, 1);
 
     SQLBindings sql = update.getSQL().get(0);
-    assertEquals("update EMPLOYEE\nset ID = ?", sql.getSQL());
-    assertEquals(Collections.singletonList(1), sql.getNullFriendlyBindings());
+    assertThat(sql.getSQL()).isEqualTo("update EMPLOYEE\nset ID = ?");
+    assertThat(sql.getNullFriendlyBindings()).isEqualTo(Collections.singletonList(1));
   }
 
   @Test
@@ -41,13 +41,15 @@ public class SQLUpdateClauseTest {
         .where(emp1.id.eq(select(emp2.id).from(emp2).where(emp2.superiorId.isNotNull())));
 
     SQLBindings sql = update.getSQL().get(0);
-    assertEquals(
-        "update EMPLOYEE\n"
-            + "set ID = ?\n"
-            + "where EMPLOYEE.ID = (select emp2.ID\n"
-            + "from EMPLOYEE emp2\n"
-            + "where emp2.SUPERIOR_ID is not null)",
-        sql.getSQL());
+    assertThat(sql.getSQL())
+        .isEqualTo(
+            """
+            update EMPLOYEE
+            set ID = ?
+            where EMPLOYEE.ID = (select emp2.ID
+            from EMPLOYEE emp2
+            where emp2.SUPERIOR_ID is not null)\
+            """);
   }
 
   @Test
@@ -58,12 +60,14 @@ public class SQLUpdateClauseTest {
     update.set(emp1.id, select(emp2.id).from(emp2).where(emp2.superiorId.isNotNull()));
 
     SQLBindings sql = update.getSQL().get(0);
-    assertEquals(
-        "update EMPLOYEE\n"
-            + "set ID = (select emp2.ID\n"
-            + "from EMPLOYEE emp2\n"
-            + "where emp2.SUPERIOR_ID is not null)",
-        sql.getSQL());
+    assertThat(sql.getSQL())
+        .isEqualTo(
+            """
+            update EMPLOYEE
+            set ID = (select emp2.ID
+            from EMPLOYEE emp2
+            where emp2.SUPERIOR_ID is not null)\
+            """);
   }
 
   @Test
@@ -74,12 +78,14 @@ public class SQLUpdateClauseTest {
     update.set(emp1.superiorId, select(emp2.id).from(emp2).where(emp2.id.eq(emp1.id)));
 
     SQLBindings sql = update.getSQL().get(0);
-    assertEquals(
-        "update EMPLOYEE\n"
-            + "set SUPERIOR_ID = (select emp2.ID\n"
-            + "from EMPLOYEE emp2\n"
-            + "where emp2.ID = EMPLOYEE.ID)",
-        sql.getSQL());
+    assertThat(sql.getSQL())
+        .isEqualTo(
+            """
+            update EMPLOYEE
+            set SUPERIOR_ID = (select emp2.ID
+            from EMPLOYEE emp2
+            where emp2.ID = EMPLOYEE.ID)\
+            """);
   }
 
   @Test
@@ -89,17 +95,18 @@ public class SQLUpdateClauseTest {
     SQLUpdateClause update =
         new SQLUpdateClause(null, SQLTemplates.DEFAULT, emp1)
             .set(emp1.superiorId, emp2.id)
-            .addFlag(
-                Position.BEFORE_FILTERS, String.format("\nfrom %s %s", emp2.getTableName(), emp2))
+            .addFlag(Position.BEFORE_FILTERS, "\nfrom %s %s".formatted(emp2.getTableName(), emp2))
             .where(emp2.id.eq(emp1.id));
 
     SQLBindings sql = update.getSQL().get(0);
-    assertEquals(
-        "update EMPLOYEE\n"
-            + "set SUPERIOR_ID = emp2.ID\n"
-            + "from EMPLOYEE emp2\n"
-            + "where emp2.ID = EMPLOYEE.ID",
-        sql.getSQL());
+    assertThat(sql.getSQL())
+        .isEqualTo(
+            """
+            update EMPLOYEE
+            set SUPERIOR_ID = emp2.ID
+            from EMPLOYEE emp2
+            where emp2.ID = EMPLOYEE.ID\
+            """);
 
     update =
         new SQLUpdateClause(null, SQLTemplates.DEFAULT, emp1)
@@ -108,11 +115,13 @@ public class SQLUpdateClauseTest {
             .where(emp2.id.eq(emp1.id));
 
     sql = update.getSQL().get(0);
-    assertEquals(
-        "update EMPLOYEE\n"
-            + "set SUPERIOR_ID = emp2.ID THE_FLAG\n"
-            + "where emp2.ID = EMPLOYEE.ID",
-        sql.getSQL());
+    assertThat(sql.getSQL())
+        .isEqualTo(
+            """
+            update EMPLOYEE
+            set SUPERIOR_ID = emp2.ID THE_FLAG
+            where emp2.ID = EMPLOYEE.ID\
+            """);
   }
 
   @Test
@@ -121,8 +130,8 @@ public class SQLUpdateClauseTest {
     SQLUpdateClause update = new SQLUpdateClause(null, SQLTemplates.DEFAULT, emp1);
     update.set(emp1.id, 1);
     update.addBatch();
-    assertEquals(1, update.getBatchCount());
+    assertThat(update.getBatchCount()).isEqualTo(1);
     update.clear();
-    assertEquals(0, update.getBatchCount());
+    assertThat(update.getBatchCount()).isEqualTo(0);
   }
 }
